react: Change useSnapshot to return an array

--- a/packages/react-example/public/index.html
+++ b/packages/react-example/public/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Examples</title>
+    <style type="text/css">
+    .value {
+      border: 1px solid #333;
+      padding: 1em;
+      margin: 0.5em 0.5em 0 0;
+      float: left;
+    }
+    </style>
   </head>
   <body>
     <noscript>
